--- a/src/app/attendance/overtime/overtime.component.html
+++ b/src/app/attendance/overtime/overtime.component.html
@@ -477,7 +477,7 @@
                                             <td>{{approvedtl.LEVEL_ID}}</td>
                                             <td>{{approvedtl.APPROVER}}</td>
                                             <td>{{approvedtl.STATUS}}</td>
-                                            <td>{{approvedtl.VERIFIED_DATE}}</td>
+                                            <td>{{approvedtl.VERIFIED_DATE | date:'dd-MM-yyyy'}}</td>
                                             <td>{{approvedtl.VERIFIED_REMARKS}}</td>
                                         </tr>
                                     </tbody>
