--- a/src/app/payroll/salary-revision/salary-revision.component.html
+++ b/src/app/payroll/salary-revision/salary-revision.component.html
@@ -164,7 +164,7 @@
                                                 <label for="nameInput" class="form-label font-type fw-semibold">Effective Date :</label>
                                             </div>
                                             <div class="col-lg-2">
-                                                <input type="date" class="form-control font-type h-30 textbox-15" min="{{mindate}}" [(ngModel)]="effectivedt">
+                                                <input type="date" class="form-control font-type h-30 textbox-15" min="{{effectivedt}}" [(ngModel)]="effectivedt">
                                             </div>
                                            
                                            
