--- a/src/app/HiringManagement/hiring-center/hiring-center.component.html
+++ b/src/app/HiringManagement/hiring-center/hiring-center.component.html
@@ -60,10 +60,10 @@
                                         </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link fs-14  font-type" data-bs-toggle="tab" href="#JobRequests" role="tab"(click)="ontabSelected(2)">
+                                        <a class="nav-link fs-14  font-type" [ngClass]="{'active': !grpname.includes('HR') && !grpname.includes('HOD') && !grpname.includes('LM')}"data-bs-toggle="tab" href="#JobRequests" role="tab"(click)="ontabSelected(2)">
                                             <i class="ri-briefcase-4-line d-inline-block d-md-none"></i> <span class="d-none d-md-inline-block">Approval Requests</span>
                                         </a>
-                                    </li>
+                                    </li>   
                                     <li class="nav-item">
                                         <a class="nav-link fs-14 font-type" data-bs-toggle="tab" href="#CandidatesEvaluation" role="tab"(click)="ontabSelected(3)">
                                             <i class="ri-list-unordered d-inline-block d-md-none"></i> <span class="d-none d-md-inline-block">Candidate Evaluation Process
@@ -208,7 +208,7 @@
                                 </div>
                                 <!-- end Job openings tab -->
                                 <!-- Job requests approvals -->
-                        <div class="tab-pane" id="JobRequests" role="tabpanel">
+                        <div class="tab-pane" id="JobRequests" role="tabpanel"[ngClass]="{'active': !grpname.includes('HR') && !grpname.includes('HOD') && !grpname.includes('LM')}">
                             <div class="row topbar-up">
                                 <div class="col-lg-12">
                                     <div class="card shadow-lg">
@@ -410,12 +410,12 @@
                                                             <td>
                                                                     <ul class="list-inline hstack gap-2 mb-0">
                                                                         <li class="list-inline-item edit" *ngIf="item.STATUS!=1" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-placement="top" title="Submit Evaluation Form">
-                                                                            <a href="#" class="text-blue d-inline-block edit-item-btn" [routerLink]="['/candidate-evaluation']" [queryParams]="{ ID: 0,VIEW:item.NO_OF_POSITIONS,REQ_ID:item.REQID}">
+                                                                            <a href="#" class="text-blue d-inline-block edit-item-btn" [routerLink]="['/candidate-evaluation']" [queryParams]="{ ID: item.NO_OF_POSITIONS,VIEW:0,REQ_ID:item.REQID}">
                                                                                 <span class="badge bg-blue text-white  width-budge fs-11 fw-medium"><i class="ri-pencil-fill fs-16"></i></span>
                                                                             </a>
                                                                         </li>
                                                                         <li class="list-inline-item" *ngIf="item.STATUS==1" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-placement="top" title="View Evaluation Form">
-                                                                            <a href="#" class="text-info d-inline-block edit-item-btn" [routerLink]="['/candidate-evaluation']" [queryParams]="{ ID: 1,VIEW:item.NO_OF_POSITIONS,REQ_ID:item.REQID}">
+                                                                            <a href="#" class="text-info d-inline-block edit-item-btn" [routerLink]="['/candidate-evaluation']" [queryParams]="{ ID: item.NO_OF_POSITIONS,VIEW:1,REQ_ID:item.REQID}">
                                                                                 <span class="badge bg-orange text-white  width-budge fs-11 fw-medium"><i class="ri-eye-line fs-16"></i></span>
                                                                             </a>
                                                                         </li>
