--- a/src/app/OffBoarding/experience-letter/experience-letter.component.html
+++ b/src/app/OffBoarding/experience-letter/experience-letter.component.html
@@ -32,17 +32,16 @@
                         <div class="card p-3" id="htmlElementId">
 
                             <!--Header-->
-                            <div class="row gy-3 ma-5">
-                                <div class="col-sm-auto">
-                                    <div class="avatar-title-lg p-1">
-                                        <img *ngIf="companydata?.length > 0" src="assets\styles\img\{{companydata[0].LOGO}}" alt="" class="img-fluid-lg" width="350px" height="100px">
-                                        <img src="" id="tableBanner" />
+                            <div class="row gy-3 ma-5 center">
+                                <!-- <div class="col-sm-auto "> -->
+                                    <div class="avatar-title-lg">
+                                        <img src="{{logo}}" alt=""  class="img-size">
                                     </div>
-                                </div>
+                                <!-- </div> -->
                                 <div class="col-sm text-center">
-                                    <h2 class="text-blue font-type" style="font-weight: bold;"*ngIf="companydata?.length > 0">{{companydata[0].COMPANY_ID}}</h2>
-                                    <h5 class="text-blue font-type" *ngIf="companydata?.length > 0">{{companydata[0].DESCRIPTION}}</h5>
-                                    <h5 class="text-blue font-type" *ngIf="companydata?.length > 0">(UAE); {{companydata[0].PHONE_NO}}; {{companydata[0].EMAI_ID}}</h5> 
+                                    <h2 class="tfont-type fs-20 text-uppercase text-black" style="font-weight: bold;">{{this.companydata[0].COMPANY_ID}}</h2>
+                                    <h5 class="font-type fs-14 text-black" >{{this.companydata[0].DESCRIPTION}}</h5>
+                                    <h5 class="font-type fs-14 text-black" >(UAE); {{this.companydata[0].PHONE_NO}}; {{this.companydata[0].EMAI_ID}}</h5> 
                                 </div>
                             </div>
                             <hr>
@@ -64,7 +63,8 @@
                             <div class="row">
                                 <div class="col-lg-12 col-md-12">
                                     <div class="p-2">
-                                        <h6 class="fs-13 font-type fw-medium"*ngIf="experiencedata?.length > 0">This is to certify that <span class="fw-semibold fs-13 text-italic"><span>{{ experiencedata[0]?.GENDER === '1' ? 'Mr.' : 'Ms.' }}</span>{{experiencedata[0].EMP_NAME}}</span><span *ngIf="experiencedata[0].PASSPORT_FLAG==1"> holder of {{experiencedata[0].PLACE}} Passport number </span><span>{{experiencedata[0].DOCUMENT_NO}}</span> has worked in <span>{{experiencedata[0].COMPANY}}</span> from <span>{{experiencedata[0].DATE_OF_JOINING | date:"dd-MM-yyyy"}}</span> to <span>{{experiencedata[0].LAST_WORKING_DATE | date:"dd-MM-yyyy"}}</span>.  At the time of leaving the company <span>{{ experiencedata[0]?.GENDER === '1' ? 'he' : 'she' }}</span> was designated as <span>{{experiencedata[0].DESIGNATION}}</span>.</h6>
+                                        <h6 class="fs-13 font-type fw-medium"*ngIf="experiencedata?.length > 0">This is to certify that <span class="fw-semibold fs-13 text-italic"><span>{{ experiencedata[0]?.GENDER === '1' ? 'Mr.' : 'Ms.' }}</span>{{experiencedata[0].EMP_NAME}}</span><span *ngIf="experiencedata[0].PASSPORT_FLAG==1"> holder of {{experiencedata[0].PLACE}} Passport number </span><span>{{experiencedata[0].DOCUMENT_NO}}</span> has worked in <span>{{experiencedata[0].COMPANY}}</span> from <span>{{experiencedata[0].DATE_OF_JOINING | date:"dd-MM-yyyy"}}</span> to <span>{{experiencedata[0].LAST_WORKING_DATE | date:"dd-MM-yyyy"}}</span>. 
+                                             At the time of leaving the company <span>{{ experiencedata[0]?.GENDER === '1' ? 'he' : 'she' }}</span> was designated as <span>{{experiencedata[0].DESIGNATION}}</span>.</h6>
                                     </div>
                                 </div>
                             </div>
@@ -89,7 +89,7 @@
                                 <div class="col-lg-12 col-md-12">
                                     <div class="p-2">
                                         <hr style="width:30%;text-align:left;margin-left:0">
-                                        <h6 class="fs-13 font-type fw-semibold"*ngIf="experiencedata?.length > 0">{{experiencedata[0].HR_NAME}}</h6>
+                                        <h6 class="fs-13 font-type fw-semibold">MERLIN VATHANA</h6>
                                         <h6 class="fs-13 font-type">HR Manager</h6>
                                     </div>
                                 </div>
