--- a/src/app/employee/employeedirectory/employeedirectory.component.html
+++ b/src/app/employee/employeedirectory/employeedirectory.component.html
@@ -42,8 +42,17 @@
                                             </div>
                                         </div>
                                         <div class="col-lg-2" *ngIf="this.grpname.includes('HR')">
+                                            <div class="text-sm-end">
+                                                <select class="form-select h-30 font-type textbox-15" name="activestatus" id="activestatus" [(ngModel)]="activestatus" (change)="changecosts()"  >
+                                                    <option value="0" >All</option>
+                                                    <option value="1" >Active</option>
+                                                    <option value="2" >Inactive</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-2" *ngIf="this.grpname.includes('HR')">
                                                 <div class="text-sm-end">
-                                                    <select class="form-select h-30 font-type textbox-15" name="completests" id="completests" #completests (change)="changecosts(completests.value)" >
+                                                    <select class="form-select h-30 font-type textbox-15" name="completests" id="completests" #completests (change)="changecosts()" >
                                                         <option value="0" >All</option>
                                                         <option value="1" >Complete</option>
                                                         <option value="2" >Incomplete</option>
